<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/IVlogo"
            android:layout_centerHorizontal="true"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/img" />

        <TextView
            android:id="@+id/TVsilahkan"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/IVlogo"
            android:gravity="center"
            android:text="@string/silahkan_login_untuk_memakai_aplikasi" />

        <EditText
            android:id="@+id/ETusername"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:hint="@string/username"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_below="@id/TVsilahkan"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/ETpassword"
            android:inputType="textPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ETusername"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:gravity="center"
            android:hint="@string/password" />

        <Button
            android:id="@+id/BTNlogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ETpassword"
            android:text="@string/sign_in"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:text="@string/create_new_accout"
            android:layout_marginTop="20dp"
            android:layout_below="@id/BTNlogin"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </RelativeLayout>
</LinearLayout>